--- a/whatsasena/Dockerfile
+++ b/whatsasena/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/nandhuz47/wizard/root/WhatsAsenaDuplicated
+RUN https://github.com/nandhuz47/wizard/nandhuz47/wizard/root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
